--- a/iOS_Aura/Device/Presentation/PropertyNotificationDetailsContactTableViewCell.xib
+++ b/iOS_Aura/Device/Presentation/PropertyNotificationDetailsContactTableViewCell.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -12,16 +11,16 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&lt;Name&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WgW-Ag-wz1">
                         <rect key="frame" x="8" y="11" width="168" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jf5-zV-7iv" customClass="ContactNotificationButton" customModule="Aura" customModuleProvider="target">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jf5-zV-7iv" customClass="ContactNotificationButton" customModule="Aura" customModuleProvider="target">
                         <rect key="frame" x="268" y="0.0" width="44" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="lmf-Ad-aNe"/>
@@ -33,7 +32,7 @@
                             <action selector="sms:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="tSQ-s9-qF7"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6g-TW-qgJ" customClass="ContactNotificationButton" customModule="Aura" customModuleProvider="target">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6g-TW-qgJ" customClass="ContactNotificationButton" customModule="Aura" customModuleProvider="target">
                         <rect key="frame" x="180" y="0.0" width="44" height="44"/>
                         <inset key="imageEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                         <state key="normal" image="icon-push"/>
@@ -41,7 +40,7 @@
                             <action selector="push:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2D0-P6-UqK"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ECh-gi-nqc" customClass="ContactNotificationButton" customModule="Aura" customModuleProvider="target">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ECh-gi-nqc" customClass="ContactNotificationButton" customModule="Aura" customModuleProvider="target">
                         <rect key="frame" x="224" y="0.0" width="44" height="44"/>
                         <inset key="imageEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                         <state key="normal" image="icon-email"/>
